# GameSDL2

./: CMakeLists.txt  README.md  main.cpp
headers/: AudioCore.h  Core.h  EnumTypes.h  FullSDL.h  GraphicCore.h  IOCore.h  ProcessManager.h  Stack.h  StateManager.h  TextureManager.h
source/: AudioCore.cpp  Core.cpp  GraphicCore.cpp  IOCore.cpp  StateManager.cpp  TextureManager.cpp
